# web_scrapy

./: .gitignore  README.md  pyproject.toml
src/codelabs_scraper/: main.py
src/codelabs_scraper/core/: strategies.py
src/codelabs_scraper/sites/: codelabs.py  generic.py
