[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codelabs-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdownify>=1.2.2",
    "playwright>=1.57.0",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[project.scripts]
codelabs-scraper = "codelabs_scraper.main:app"
